--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 NODE_ENV=development
-VITE_API_BASE_URL=https://iuh.api.nagentech.com/api
+VITE_API_BASE_URL=https://api.iuh.nagentech.com/
 VITE_API_TIMEOUT=10000
