--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^5.2.1",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
+    "@mui/x-data-grid": "^8.13.1",
     "axios": "^1.11.0",
     "dayjs": "^1.11.13",
     "i18next": "^25.3.2",
