--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-day-picker": "^9.11.0",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.64.0",
+    "react-router-dom": "^7.9.3",
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
