--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.18",
     "dropdown-menu": "^0.1.1",
