--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-hook-form": "^7.64.0",
     "react-router-dom": "^7.9.3",
     "recharts": "^2.15.4",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.14",
