--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-day-picker": "^9.11.0",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.64.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.9.3",
     "recharts": "^2.15.4",
     "socket.io-client": "^4.8.1",
